# Mortgage-Approval-Automation

./: .gitignore  app.py  classifier.py  document_processor.py  income_extractor.py  pyproject.toml  utils.py
.upm/: store.json
helpers/: format_income.py  get_gpt_response.py
